Fixed PMD/checkstyle errors